# selenium_labanquepostale

./: .gitignore  pyproject.toml
lbp/: frame_context.py  lbp.py
lbp_selenium_client/: constants.py  lbp.py
lbp_selenium_client/data/: __init__.py  buttons.npy.xz
tests/: test_lbp.py
