[tool.poetry]
name = "lbp"
version = "0.1.0"
description = "Selenium based la banque postale client"
authors = ["Xavier TOLZA <tolza.xavier@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.13.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
